Thêm gg map vào footer

--- a/src/main/resources/templates/frame/footer.html
+++ b/src/main/resources/templates/frame/footer.html
@@ -1,9 +1,27 @@
 <footer>
   <div class="container">
     <!-- Banner -->
-    <div class="mb-4">
-      <img th:src="@{/images/banner1.webp}" class="d-block w-100 rounded" alt="Banner">
+<!--    <div class="mb-4">-->
+<!--      <img th:src="@{/images/banner1.webp}" class="d-block w-100 rounded" alt="Banner">-->
+<!--    </div>-->
+    <!-- Google Map Start -->
+    <div
+            class="container-xxl px-0 wow fadeIn"
+            data-wow-delay="0.1s"
+            style="margin-bottom: -6px"
+    >
+      <iframe
+              class="w-100"
+              style="height: 450px"
+              src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3918.7738782338347!2d106.67073027317034!3d10.82860905823285!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3175291cfb0d4129%3A0xa1ba71cbb56bbe1b!2sHUNG%20THINH%20TECH!5e0!3m2!1sen!2s!4v1747456564462!5m2!1sen!2s"
+              frameborder="0"
+              allowfullscreen=""
+              loading="lazy"
+              referrerpolicy="no-referrer-when-downgrade"
+      >
+      </iframe>
     </div>
+    <!-- Google Map End -->
 
     <div class="row text-start">
       <!-- Liên hệ -->
