--- a/src/main/resources/templates/all-products.html
+++ b/src/main/resources/templates/all-products.html
@@ -138,6 +138,9 @@
 </head>
 <body>
 <div th:insert="~{frame/header :: header}"></div>
+<!-- Thêm vào ngay sau <body> hoặc sau <div th:insert="~{frame/header :: header}"> -->
+<div style="height: 100px;"></div> <!-- điều chỉnh theo chiều cao navbar thực tế -->
+
 <div class="container mt-4">
     <div class="row">
         <!-- ASIDE FILTER -->
