--- a/src/main/resources/templates/all-products.html
+++ b/src/main/resources/templates/all-products.html
@@ -7,6 +7,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
     <link rel="stylesheet" th:href="@{/CSS/header.css}">
     <link rel="stylesheet" th:href="@{/CSS/footer.css}">
+    <link rel="stylesheet" th:href="@{/CSS/breadcrumb.css}">
     <style>
         .card {
             border: none;
@@ -134,12 +135,14 @@
             text-decoration: none;
             font-weight: 600;
         }
+
     </style>
 </head>
 <body>
 <div th:insert="~{frame/header :: header}"></div>
 <!-- Thêm vào ngay sau <body> hoặc sau <div th:insert="~{frame/header :: header}"> -->
 <div style="height: 100px;"></div> <!-- điều chỉnh theo chiều cao navbar thực tế -->
+<div th:insert="~{frame/breadcrumb :: breadcrumb}"></div>
 
 <div class="container mt-4">
     <div class="row">
