Chỉnh sửa trang sản phẩm

--- a/src/main/resources/templates/info.html
+++ b/src/main/resources/templates/info.html
@@ -9,7 +9,8 @@
 </head>
 <body>
     <div th:insert="~{frame/header :: header}"></div>
-
+    <!-- Thêm vào ngay sau <body> hoặc sau <div th:insert="~{frame/header :: header}"> -->
+    <div style="height: 100px;"></div> <!-- điều chỉnh theo chiều cao navbar thực tế -->
     <h1>Liên hệ: 0334043217.</h1>
     <h4 style="margin-bottom: 300px">Địa chỉ: Quận 12, TP.HCM</h4>
 
