--- a/src/main/resources/templates/admin/dashboard.html
+++ b/src/main/resources/templates/admin/dashboard.html
@@ -5,6 +5,8 @@
     <title>Trang quản trị</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" integrity="sha512-..." crossorigin="anonymous" referrerpolicy="no-referrer" />
+
 
     <style>
         :root {
@@ -90,41 +92,47 @@
             <ul class="nav flex-column">
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/admin/dashboard}">
-                        <i class="bi bi-house-door-fill"></i> Trang quản trị
+                        <i class="fa-solid fa-house"></i> Trang quản trị
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/users}">
-                        <i class="bi bi-person-fill"></i> Quản lý người dùng
+                        <i class="fa-solid fa-user"></i> Quản lý người dùng
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/product/list}">
-                        <i class="bi bi-box-seam"></i> Quản lý sản phẩm
+                        <i class="fa-solid fa-box"></i> Quản lý sản phẩm
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/category/list}">
-                        <i class="bi bi-tags-fill"></i> Quản lý danh mục
+                        <i class="fa-solid fa-tags"></i> Quản lý danh mục
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/orders}">
-                        <i class="bi bi-receipt"></i> Quản lý hóa đơn
+                        <i class="fa-solid fa-file-invoice"></i> Quản lý hóa đơn
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/report}">
-                        <i class="bi bi-bar-chart-fill"></i> Quản lý kho
+                        <i class="fa-solid fa-warehouse"></i> Quản lý kho
+                    </a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" th:href="@{/admin/revenue}">
+                        <i class="fa-solid fa-chart-bar"></i> Thống kê doanh thu
                     </a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" th:href="@{/index}">
-                        <i class="bi bi-arrow-left-circle-fill"></i> Quay về trang chủ
+                        <i class="fa-solid fa-circle-arrow-left"></i> Quay về trang chủ
                     </a>
                 </li>
             </ul>
         </nav>
+
 
         <!-- Main content -->
         <main id="content" class="col-md-9 col-lg-10">
